--- a/.github/workflows/sdk-ui.yaml
+++ b/.github/workflows/sdk-ui.yaml
@@ -84,11 +84,11 @@ jobs:
         with:
           ref: ${{ github.ref }}
           
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
-          java-version: 17
+          java-version: 21
           
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
@@ -100,7 +100,7 @@ jobs:
         run: chmod +x ./gradlew
         
       - name: Build and Publish
-        run: ./gradlew :sourcesync-sdk-ui:publishAndReleaseToMavenCentral
+        run: ./gradlew :sourcesync-sdk-ui:publishAndReleaseToMavenCentral --stacktrace
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_USERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_PASSWORD }}
