--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ constraintlayout = "2.2.0"
 leanback = "1.0.0"
 glide = "4.11.0"
 vanniktech = "0.29.0"
+gif = "1.2.29"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -25,6 +26,8 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 androidx-leanback = { group = "androidx.leanback", name = "leanback", version.ref = "leanback" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
+gif-drawable = {module = "pl.droidsonroids.gif:android-gif-drawable", version.ref = "gif"}
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
